--- a/templates/supportdesk/request.html
+++ b/templates/supportdesk/request.html
@@ -1,34 +1,36 @@
 {% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
 
-  <div class="container pt-4">
-      <div class="row">
-        <div class="col">
-          <img src="https://uploads-ssl.webflow.com/62fc7544b2fc768dd0d052e6/62fc7c0bd02ef3d093c765d0_dark_ihorizon.svg" />
-        </div>
-        
-        <div class="col-md-auto">
-          <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'myrequests' %}'">My requests ({{ user_request_count }})</button>
-        </div>
-        <div class="col-md-auto float-right">
-          <button type="button" class="btn btn-primary" onclick="location.href='{% url 'request' %}'">+ New request</button>
-        </div>
-      </div>
-  </div>
-  </div>
-  {% if not user.is_authenticated %}
-  <div class="row justify-content-center mt-4">
-    <div class="card float-middle" style="width: 18rem">
-      <div class="card-body">
-        <h5 class="card-title">Please login!!</h5>
-        <h6 class="card-subtitle mb-2 text-muted">
-          Please login to a customer account to create requests
-        </h6>
+<div class="container pt-4">
+  <div class="row">
+    <div class="col">
+      <img src="https://uploads-ssl.webflow.com/62fc7544b2fc768dd0d052e6/62fc7c0bd02ef3d093c765d0_dark_ihorizon.svg" />
+    </div>
 
-        <a href="/auth/register" class="card-link">Register</a>
-        <a href="/auth/login" class="card-link">Login</a>
-      </div>
+    <div class="col-md-auto">
+      <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'myrequests' %}'">My requests
+        ({{ user_request_count }})</button>
+    </div>
+    <div class="col-md-auto float-right">
+      <button type="button" class="btn btn-primary" onclick="location.href='{% url 'request' %}'">+ New request</button>
     </div>
   </div>
+</div>
+</div>
+
+{% if not user.is_authenticated %}
+<div class="row justify-content-center mt-4">
+  <div class="card float-middle" style="width: 18rem">
+    <div class="card-body">
+      <h5 class="card-title">Please login!!</h5>
+      <h6 class="card-subtitle mb-2 text-muted">
+        Please login to a customer account to create requests
+      </h6>
+
+      <a href="/auth/register" class="card-link">Register</a>
+      <a href="/auth/login" class="card-link">Login</a>
+    </div>
+  </div>
+</div>
 </div>
 
 {% elif user.is_staff %}
@@ -45,6 +47,7 @@
     </div>
   </div>
 </div>
+
 {% elif user.is_superuser %}
 <div class="row justify-content-center mt-4">
   <div class="card float-middle" style="width: 18rem">
@@ -59,6 +62,7 @@
     </div>
   </div>
 </div>
+
 {% else %}
 <div class="container p-5">
   <div class="row justify-content-center">
@@ -84,5 +88,5 @@
       </form>
     </div>
 
-</div>
-{% endif %} {% endblock %}
+  </div>
+  {% endif %} {% endblock %}
