--- a/templates/supportdesk/staff_requests.html
+++ b/templates/supportdesk/staff_requests.html
@@ -1,92 +1,108 @@
 {% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
-  <div class="container pt-4">
-    <div class="row justify-content-md-center">
-      <div class="row">
-        <div class="col">
-          <img src="https://uploads-ssl.webflow.com/62fc7544b2fc768dd0d052e6/62fc7c0bd02ef3d093c765d0_dark_ihorizon.svg" />
-        </div>
+<div class="container pt-4">
+  <div class="row justify-content-md-center">
+    <div class="row">
+      <div class="col">
+        <img
+          src="https://uploads-ssl.webflow.com/62fc7544b2fc768dd0d052e6/62fc7c0bd02ef3d093c765d0_dark_ihorizon.svg" />
       </div>
     </div>
   </div>
+</div>
 
-  <div class="container pt-3">
-    <p class="h3 mb-2">All open requests</p>
-  </div>
-  <div class="container pt-3">
+<div class="container pt-3">
+  <p class="h3 mb-2">All open requests</p>
+</div>
+<div class="container pt-3">
+
   {% if user.is_authenticated and user.is_staff%}
   {% for requests in staff_requests %}
   <div class="card rounded-0">
+    <div class="card-body">
+
+      <a href="{% url " single_request" requests.id %}">
+        <h5 class="card-title mb-1">
+          {{ requests.summary }} 
+          
+          {% if requests.priority_flag %}
+          <span class="badge badge-pill badge-danger text-capitalize">High Priority</span>
+          {% endif %}
+          
+          {% if requests.status == 'I' %}
+          <span class="badge badge-pill badge-primary float-right text-lowercase">In progress</span>
+          
+          {% else %}
+          <span class="badge badge-pill badge-success float-right text-capitalize">Completed</span>
+          
+          {% endif %}
+        </h5>
+        <p class="card-text text-dark">{{ requests.description }}</p>
+        <p class="card-text">
+          <small class="text-muted font-weight-bolder">Quick actions</small>
+        </p>
+      </a>
+      <div class="row">
+        <form action="{% url " staff_requests" %}" method="POST">
+          <input type="hidden" name="reassign" value="{{requests.id}}" />
+          {% csrf_token %}
+          <button class="btn mr-2 ml-2 btn-sm btn-outline-primary" onclick="refreshPage();">Reassign to someone</button>
+        </form>
+
+        <form action="{% url " staff_requests" %}" method="POST">
+          <input type="hidden" name="request_id" value="{{requests.id}}" />
+          {% csrf_token %}
+          <button class="btn btn-sm btn-success" onclick="refreshPage();">Mark as completed</button>
+        </form>
+
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+  
+  {% for requests in staff_completed %}
+  <div class="card rounded-0">
     <div class="card-body ">
 
-          <a href="{% url "single_request" requests.id %}" >
-          <h5 class="card-title mb-1">
-            {{ requests.summary }} {% if requests.priority_flag %}
-              <span class="badge badge-pill badge-danger text-capitalize">High Priority</span>
-            {% endif %}
-            {% if requests.status == 'I' %}
-              <span class="badge badge-pill badge-primary float-right text-lowercase">In progress</span>
-            {% else %}
-              <span class="badge badge-pill badge-success float-right text-capitalize">Completed</span>
-            {% endif %}
-          </h5>
-          <p class="card-text text-dark" >{{ requests.description }}</p>
-          <p class="card-text">
-            <small class="text-muted font-weight-bolder">Quick actions</small>
-          </p>
-        </a>
-            <div class="row">
-            <form action= "{% url "staff_requests" %}" method="POST">
-              <input type="hidden" name="reassign" value="{{requests.id}}" />
-              {% csrf_token %}
-              <button class="btn mr-2 ml-2 btn-sm btn-outline-primary" onclick="refreshPage();">Reassign to someone</button>
-            </form>
-            
-            <form action= "{% url "staff_requests" %}" method="POST">
-              <input type="hidden" name="request_id" value="{{requests.id}}" />
-              {% csrf_token %}
-              <button class="btn btn-sm btn-success" onclick="refreshPage();">Mark as completed</button>
-            </form>
-      
-        </div>
-      </div>
-    </div>
-  {% endfor %}
-    {% for requests in staff_completed %}
-    <div class="card rounded-0">
-      <div class="card-body ">
-  
-            <a href="{% url "single_request" requests.id %}" >
-            <h5 class="card-title mb-1">
-              {{ requests.summary }} {% if requests.priority_flag %}
-                <span class="badge badge-pill badge-danger text-capitalize">High Priority</span>
-              {% endif %}
-              {% if requests.status == 'I' %}
-                <span class="badge badge-pill badge-primary float-right text-lowercase">In progress</span>
-              {% else %}
-                <span class="badge badge-pill badge-success float-right text-capitalize">Completed</span>
-              {% endif %}
-            </h5>
-            <p class="card-text text-dark" >{{ requests.description }}</p>
+      <a href="{% url " single_request" requests.id %}">
+        <h5 class="card-title mb-1">
+          {{ requests.summary }} 
+          
+          {% if requests.priority_flag %}
+          <span class="badge badge-pill badge-danger text-capitalize">High Priority</span>
+          {% endif %}
+          
+          {% if requests.status == 'I' %}
+          <span class="badge badge-pill badge-primary float-right text-lowercase">In progress</span>
+          
+          {% else %}
+          <span class="badge badge-pill badge-success float-right text-capitalize">Completed</span>
+          
+          {% endif %}
+        </h5>
+        <p class="card-text text-dark">{{ requests.description }}</p>
 
-          </a>
-        </div>
-      </div>
-    {% endfor %}
+      </a>
+    </div>
+  </div>
+  {% endfor %}
 
   {% if is_paginated %}
-    <div class="container pt-3">
-      <div class="pagination">
-        <span class="page-links">
-          {% if page_obj.has_previous %}
-            <a href="/supportdesk/staff_requests?page={{ page_obj.previous_page_number }}">previous</a>
-          {% endif %}
-          <span class="page-current">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</span>
-          {% if page_obj.has_next %}
-            <a href="/supportdesk/staff_requests?page={{ page_obj.next_page_number }}">next</a>
-          {% endif %}
-        </span>
-      </div>
+  <div class="container pt-3">
+    <div class="pagination">
+      <span class="page-links">
+        
+        {% if page_obj.has_previous %}
+        <a href="/supportdesk/staff_requests?page={{ page_obj.previous_page_number }}">previous</a>
+        
+        {% endif %}
+        <span class="page-current">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</span>
+        
+        {% if page_obj.has_next %}
+        <a href="/supportdesk/staff_requests?page={{ page_obj.next_page_number }}">next</a>
+        {% endif %}
+      </span>
     </div>
+  </div>
   {% endif %}
 
   {% else %}
@@ -103,6 +119,6 @@
       </div>
     </div>
   </div>
-  
+
   {% endif %}
-{% endblock %}
+  {% endblock %}
