--- a/templates/supportdesk/request.html
+++ b/templates/supportdesk/request.html
@@ -75,14 +75,35 @@
             <h5 class="card-title">Request Information</h5>
             <p class="card-text">{{form.summary|as_crispy_field}}</p>
             <p class="card-text">{{form.description|as_crispy_field}}</p>
-            {{form.priority_flag|as_crispy_field}} {{form.user.as_hidden}}
-            <script>
-              var name = {{ user.id }};
-              document.getElementById("id_user").value = name;
-            </script>
-            <button type="submit" class="btn btn-block btn-primary">
+            <p>
+            <div class="custom-control custom-switch ">
+              <input type="checkbox" class="custom-control-input" id="customSwitch1"  >
+              <label class="custom-control-label" for="customSwitch1">Priority flag</label>
+            </div>
+            {{form.priority_flag.as_hidden}} 
+            </p>
+            {{form.user.as_hidden}}
+            <button type="submit" class="btn btn-block btn-primary" id = "addRequest">
               Create support request
             </button>
+            <script>
+              {% comment %} var name = {{ user.id }};
+              document.getElementById("id_user").value = name;
+              checkbox=document.getElementById('customSwitch1'); 
+              document.getElementById("id_priority_flag").value = checkbox.checked ;
+              console.log(checkbox.checked);
+              document.getElementById('customSwitch1').addEventListener("click", ()=> {
+                checkbox=document.getElementById('customSwitch1'); 
+                document.getElementById("id_priority_flag").value = checkbox.checked ;
+              }); {% endcomment %}
+              document.getElementById('addRequest').addEventListener("click", ()=>{
+                checkbox=document.getElementById('customSwitch1'); 
+                console.log(checkbox.checked); 
+                document.getElementById("id_priority_flag").value = checkbox.checked ;
+                var name = {{ user.id }};
+                document.getElementById("id_user").value = name;
+              })
+            </script>
           </div>
         </div>
       </form>
