--- a/templates/supportdesk/my_requests.html
+++ b/templates/supportdesk/my_requests.html
@@ -20,6 +20,7 @@
   <p class="h3 mb-2">My requests</p>
 </div>
 
+{% comment %} Showing each requests on cards {% endcomment %}
 {% for requests in myrequests %}
 <div class="container pt-3">
   <div class="card rounded-0 ">
