--- a/templates/supportdesk/staff_requests.html
+++ b/templates/supportdesk/staff_requests.html
@@ -57,8 +57,14 @@
 
         <form action="{% url "staff_requests" %}" method="POST">
           <input type="hidden" name="request_id" value="{{requests.id}}" />
+          
           {% csrf_token %}
-          <button class="btn btn-sm btn-success" onclick="location.href='{% url 'staff_requests' %}">Mark as completed</button>
+          <button class="btn btn-sm btn-outline-success" onclick="location.href='{% url 'staff_requests' %}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
+              <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+            </svg>
+            Mark as completed
+          </button>
         </form>
 
       </div>
